--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <section id="hero" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h2>The <strong>AI-Powered</strong> Path to Proactive Health.</h2>
-                <p>Leveraging <strong>Machine Learning</strong> for <strong>personalized</strong> health insights and preventative care.</p>
-                <a href="#" class="primary-cta">Download App Mockup (Demo)</a>
+                <h2>The <strong>analytics tool</strong> for managing your health.</h2>
+                <p>Helping others manage health using <strong>Data Visualization</strong> for <strong>personalized</strong> health insights, check-up, treatment information and preventative care.</p>
+                <a href="https://pluswellness.lovable.app/" class="primary-cta">Go to Health Record Manager</a>
             </div>
-            <div class="hero-visual">
-                <!-- Image of App Mockup (Blue/Teal theme) -->
-                <img src="https://placehold.co/300x600/007bff/ffffff/png?text=App+Dashboard" alt="Wellness+ App Dashboard Mockup" style="max-width: 100%; border-radius: 20px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);">
+            <div class="hero-content">
+                <h2>The <strong>AI-Powered</strong> Path to Proactive Health.</h2>
+                <p>Leveraging <strong>Machine Learning</strong> for <strong>quick and easy</strong> diagnosis of dieseases.</p>
+                <a href="https://wellnessplus.lovable.app/" class="primary-cta">Go to Symptoms Predictor</a>
             </div>
         </div>
     </section>
@@ -90,7 +91,7 @@
                 <div class="developer-card">
                     <div class="dev-img">
                         <!-- Placeholder Image 5: Omkar Govilkar -->
-                        <img src="https://media.licdn.com/dms/image/v2/D4E35AQEpZ2CB059x4A/profile-framedphoto-shrink_200_200/B4EZelZ3TGG4AY-/0/1750826710621?e=1763614800&v=beta&t=HZE8pPOQnTBcSH3a0gWxVcIp2R6701OeEerypRkfwqA" alt="Omkar Govilkar" class="profile-img">
+                        <img src="https://media.licdn.com/dms/image/v2/D4E03AQGNUMTuq4IHtg/profile-displayphoto-scale_200_200/B4EZelZ2OOHwAY-/0/1750826708587?e=2147483647&v=beta&t=23iDzhmN_O7eG_TCpNmh9n4TybuF0CvrnA7bSNJdNAw" alt="Omkar Govilkar" class="profile-img">
                     </div>
                     <h4>Omkar Govilkar</h4>
                     <p class="role">Healthcare Analyst</p>
@@ -117,7 +118,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Wellness+. An AIML Engineering Project.</p>
+            <marquee><p>&copy; 2025 Wellness+. An AIML Engineering Project.</p></marquee>
         </div>
     </footer>
 
