Fix hero section links in index.html
Updated links in the hero section to point to the correct URLs.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     Helping users monitor their health using <strong>data visualization</strong>,
                     personalized insights, treatment information and preventative care.
                 </p>
-                <a href="https://pluswellness.lovable.app/" class="primary-cta">
+                <a href="https://demonstration-gules.vercel.app/" class="primary-cta">
                     Go to Health Record Manager
                 </a>
             </div>
@@ -177,3 +177,4 @@
 
 </body>
 </html>
+
