Fixed HTML image embedding for Harshal Mahale

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <!-- Developer 3 -->
                 <div class="developer-card reveal delay-3">
                     <div class="dev-img">
-                        <img src="https://media.licdn.com/dms/image/v2/D4D03AQFio-ojMTA33A/profile-displayphoto-scale_200_200/B4DZqBFO.CKQAY-/0/1763102226265?e=2147483647&v=beta&t=_R2ukBtIRTRHLUiaFaXd2UM-EXuIAUeeBy7sVgwaoRI" alt="Harshal Mahale" class="profile-img" />
+                        <img src="https://media.licdn.com/dms/image/v2/D4D03AQHZQbiB9TZJqw/profile-displayphoto-scale_200_200/B4DZrJ2KDwGkAc-/0/1764323013460?e=2147483647&v=beta&t=uUF5wu-UYwgQOLG8RjH3wjQNOh3WVayrAv7Rk68jVqg" alt="Harshal Mahale" class="profile-img" />
                     </div>
                     <h4>Harshal Mahale</h4>
                     <p class="role">Data Extractor</p>
@@ -177,4 +177,5 @@
 
 </body>
 </html>
+
 
